--- a/src/components/style.css
+++ b/src/components/style.css
@@ -8,10 +8,24 @@ html {
     margin: 0;
     width: 100%;
     height: 100%;
+    /* COLORS */
+    --purple: #65008a;
+    --orange: #c94700;
+    --red: #db000b;
+    --pink: #de006f;
+    --blue: #0027a8;
+}
+
+p, h1, h2, h3, button {
+    font-family: inherit;
+    font-size: inherit;
+    font-weight: normal;
 }
 
 body {
+    margin: 0;
     font-family: 'FluxisheElse', sans-serif;
     --off-white: #FFE6C2;
     background-color: var(--off-white);
+    font-size: 20px;
 }
