--- a/src/style/index.css
+++ b/src/style/index.css
@@ -47,3 +47,9 @@ body {
     background-color: var(--off-white);
     font-size: 20px;
 }
+
+::-webkit-scrollbar {
+    background: transparent;
+    width: 0;
+    height: 0;
+}
