--- a/src/style/index.css
+++ b/src/style/index.css
@@ -53,3 +53,15 @@ body {
     width: 0;
     height: 0;
 }
+
+/* OVERRIDES FOR SPECIAL CASES */
+@media screen and (min-width: 600px) {
+    #almost-right .TitleSlide {
+        align-items: center;
+    }
+    #almost-right .title {
+        width: 100%;
+        max-width: 1100px;
+        align-items: center;
+    }
+}
