--- a/src/style/index.css
+++ b/src/style/index.css
@@ -65,3 +65,21 @@ body {
         align-items: center;
     }
 }
+
+@keyframes fade-in {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes fade-out {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
+}
