Conditionally show/hide focus rings depending on input

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -83,3 +83,8 @@ body {
         opacity: 0;
     }
 }
+
+/* Hide focus ring for mouse users */
+[data-whatintent='mouse'] *:focus {
+    outline: 0 !important;
+}
