Update Horizon color and video

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -17,7 +17,7 @@ html {
     --purple: #65008a;
     --orange: #c94700;
     --red: #db000b;
-    --pink: #de006f;
+    --pink: #C70074;
     --blue: #0027a8;
 }
 
